--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,7 +16,7 @@ p {
     margin-bottom: 0;
 }
 
-.tarjeta {
+.card1 {
     position: relative;
     z-index: 3;
     width: 70%;
@@ -47,18 +47,18 @@ ul li {
     align-items: center;
 }
 
-.icono {
+.icon-x {
     color: red;
     visibility: hidden;
     cursor:pointer;
 }
 
-.contador {
+.counter {
     padding: 5px 15px;
     color: rgb(213, 216, 215);
  }
 
-.agregarTarea {
+.add-task {
     color: lightgrey;
 }
 
@@ -66,7 +66,7 @@ li:hover .icono {
    visibility: visible;
 }
 
-.tarjeta2 {
+.card2 {
     position: relative;
     z-index: 2;
     transform: translateY(-15px);
@@ -77,7 +77,7 @@ li:hover .icono {
     margin: 0 auto;
 }
 
-.tarjeta3 {
+.card3 {
     position: relative;
     z-index: 1;
     transform: translateY(-30px);
